[package]
name = "WatchProxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.9"
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2.0"
hyper = { version = "0.14.19", features = ["client"] }
