[package]
name = "watch-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }

axum = "0.5.9"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace"] }
reqwest = "0.11.11"
http = "0.2.8"

tracing = "0.1"
tracing-subscriber = "0.2.0"

anyhow = "1.0.58"
thiserror = "1.0.31"
